docs: clarify Linux-only prerequisites and add CRLF/proxy troubleshooting
Document additional apt packages (python3-pip, ca-certificates), a warning
against copying the JDime clone from Windows (CRLF in gradlew), proxy
environment variables, and matching troubleshooting entries.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>